Fix a wrapping issue with multi-column layout and uneven heights

--- a/src/sprout/media/css/admin_layout.css
+++ b/src/sprout/media/css/admin_layout.css
@@ -6265,6 +6265,7 @@ screen and (max-width: 768px) {
 
 .col--one-half:nth-child(2n+1) {
     margin-left: 0;
+    clear: left;
 }
 
 
@@ -6319,6 +6320,7 @@ screen and (max-width: 768px) {
 
 .col--one-third:nth-child(3n+1) {
     margin-left: 0;
+    clear: left;
 }
 
 .col--two-third {
